--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.EasyButton/2.4.0/easy-button.js"></script>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.EasyButton/2.4.0/easy-button.css" />
 		<script src="leaflet-heat.js"></script>
-		<title>Ejemplo 3</title>
-		<link rel="stylesheet" href="../Leaflet I/css/styl.css">
+		<title>Actividad_2</title>
+		<link rel="stylesheet" href="../act_2/css/styl.css">
 		<link rel="stylesheet" href="posición/dist/L.Control.Locate.min.css" />
 		<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" rel="stylesheet"/>
 		<script src="posición/src/L.Control.Locate.js" ></script>
