--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.EasyButton/2.4.0/easy-button.css" />
 		<script src="leaflet-heat.js"></script>
 		<title>Actividad_2</title>
-		<link rel="stylesheet" href="../act_2/css/styl.css">
+		<link rel="stylesheet" href="styl.css">
 		<link rel="stylesheet" href="posición/dist/L.Control.Locate.min.css" />
 		<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" rel="stylesheet"/>
-		<script src="posición/src/L.Control.Locate.js" ></script>
+		<script src="L.Control.Locate.js" ></script>
 	</head>
 	<body>
 		<div id="map" style="z-index:0">
