--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="styl.css">
 		<link rel="stylesheet" href="posición/dist/L.Control.Locate.min.css" />
 		<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" rel="stylesheet"/>
-		<script src="L.Control.Locate.js" ></script>
+		<script src="posición/src/L.Control.Locate.js" ></script>
 	</head>
 	<body>
 		<div id="map" style="z-index:0">
